--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body {
   font-size: 0; /* prevent font-size inheritance messing bar height */
 }
 
+#menu-button {
+  background-color: rgba(255, 255, 255, 0.8); /* temporary */
+  border-radius: 4px;
+}
+  
 #menu-button .bar {
   width: 100%;
   height: 4px;
