--- a/style.css
+++ b/style.css
@@ -14,17 +14,17 @@ body {
   padding: 0 0; /* default: no padding on large screens */
 }
 
-.section-content {
+.section2-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: auto;
-  height: auto;
-}
-.slide-image {
-  width: 50vw;         /* 50% of viewport width */
-  height: auto;
-  display: block;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
+.slide-image {
+  width: 50vw;
+  height: 50vh;
+  object-fit: contain;
+  display: block;
+}
