--- a/style.css
+++ b/style.css
@@ -28,4 +28,14 @@ body {
   height: 100%;
   overflow: hidden;
 }
-
+#dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;   /* <== this makes it attach directly to the button */
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
+  z-index: 3;
+  border-radius: 5px;
+}
